dimagi-SalesforceFB/src/objects/Contract_Country__c.object
<CustomObject>
    <description>Links contracts to countries.</description>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <formula>Text(Contract__r.Status__c)</formula>
        <label>Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>DContract__c</referenceTo>
        <relationshipLabel>Countries</relationshipLabel>
        <relationshipName>Contract_Countries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contract_Countries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contract Country</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Contract Country Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>